# GeneralsGameLab

./: CMakeLists.txt  CMakePresets.json  README.md
Core/Libraries/Source/debug/: CMakeLists.txt
Core/Libraries/Source/profile/: CMakeLists.txt
Core/Tools/: CMakeLists.txt
Core/Tools/DebugWindow/: DebugWindowDialog.cpp
Core/Tools/W3DView/: AmbientLightDialog.cpp  AnimatedSoundOptionsDialog.cpp  AnimationSpeed.cpp  BackgroundBMPDialog.cpp  BackgroundColorDialog.cpp  BackgroundObjectDialog.cpp  BoneMgrDialog.cpp  CameraSettingsDialog.cpp  ColorPickerDialogClass.cpp  ColorSelectionDialog.cpp  DataTreeView.cpp  DeviceSelectionDialog.cpp  DialogToolbar.cpp  EditLODDialog.cpp  EmitterColorPropPage.cpp  EmitterGeneralPropPage.cpp  EmitterParticlePropPage.cpp  EmitterPhysicsPropPage.cpp  EmitterUserPropPage.cpp  GammaDialog.cpp  HierarchyPropPage.cpp  MainFrm.cpp  ParticleBlurTimeKeyDialog.cpp  PlaySoundDialog.cpp  ResolutionDialog.cpp  RingGeneralPropPage.cpp  SaveSettingsDialog.cpp  SceneLightDialog.cpp  SoundEditDialog.cpp  SphereColorPropPage.cpp  SphereGeneralPropPage.cpp  TexturePathDialog.cpp  VolumeRandomDialog.cpp  W3DView.cpp
Core/Tools/WW3D/max2w3d/: vchannel.cpp
Core/Tools/gltf2w3d/: CMakeLists.txt  gltf2w3d.cpp
Generals/Code/Tools/ParticleEditor/: CColorAlphaDialog.cpp  CSwitchesDialog.cpp  EmissionTypePanels.cpp  MoreParmsDialog.cpp  ParticleEditorDialog.cpp  ParticleTypePanels.cpp  VelocityTypePanels.cpp
GeneralsMD/Code/Tools/ParticleEditor/: CColorAlphaDialog.cpp  CSwitchesDialog.cpp  EmissionTypePanels.cpp  (+4 more)
cmake/: config-build.cmake
(+112 files in other folders)
